fix(components): add spacing between the dialog content and submit buttons

--- a/src/renderer/src/components/dialog/Dialog.module.scss
+++ b/src/renderer/src/components/dialog/Dialog.module.scss
@@ -4,6 +4,7 @@
 
    display: grid;
    grid-template-rows: 9fr 1fr;
+   grid-row-gap: 1em;
 
    position: fixed;
    top: 5%;
